kubernetes/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: backend-policy
spec:
  podSelector:
    matchLabels:
      app: secure-backend
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: secure-frontend
      ports:
        - protocol: TCP
          port: 5000
  policyTypes:
    - Ingress
